--- a/public/css/simple.css
+++ b/public/css/simple.css
@@ -259,6 +259,8 @@ color: #fff;
 .item.list-group-item .list-group-image
 {
     margin-right: 10px;
+   
+
 }
 .item.list-group-item .thumbnail
 {
@@ -268,6 +270,14 @@ color: #fff;
 {
     padding: 9px 9px 0px 9px;
 }*/
+
+.thumbnail a img {
+   width:auto;
+    height: auto;
+    overflow:hidden;
+
+
+}
 .item.list-group-item:nth-of-type(odd)
 {
     background: #eeeeee;
